--- a/app/src/main/res/layout/activity_receptor.xml
+++ b/app/src/main/res/layout/activity_receptor.xml
@@ -59,7 +59,8 @@
         android:text="@string/text_out_name"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorSecondaryText"/>
 
     <TextView
         android:id="@+id/txt_out_lastname_in"
@@ -70,7 +71,8 @@
         android:text="@string/text_out_lastname"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_out_name_text"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:textColor="@color/colorSecondaryText"/>
 
     <TextView
         android:id="@+id/txt_out_age_in"
@@ -81,5 +83,6 @@
         android:text="@string/text_out_age"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_out_lastname_in"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:textColor="@color/colorSecondaryText"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
