--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="@string/text_in"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/txt_name_main"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txt_name_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
@@ -35,32 +36,33 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
         android:ems="10"
+        android:hint="@string/text_in"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/txt_lastname_main"
         app:layout_constraintTop_toBottomOf="@+id/txt_name_input" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txt_lastname_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="75dp"
         android:text="@string/text_lastname"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/txt_name_main"
         android:textSize="20sp"/>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txt_age_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="75dp"
         android:text="@string/text_age"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/txt_lastname_main"
         android:textSize="20sp"/>
 
     <EditText
@@ -70,14 +72,15 @@
         android:layout_marginTop="55dp"
         android:layout_marginEnd="10sp"
         android:ems="10"
+        android:hint="@string/text_in"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/txt_age_main"
         app:layout_constraintTop_toBottomOf="@+id/txt_lastname_input" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_send_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
@@ -85,7 +88,8 @@
         android:text="@string/text_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_age_input"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_age_input"
+        android:background="@color/colorAccent"/>
 
     <TextView
         android:id="@+id/icon_primary_id"
@@ -93,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:drawableBottom="@drawable/icon_id_primary"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/button_send_main"
+        app:layout_constraintStart_toStartOf="@+id/button_send_main"
+        app:layout_constraintTop_toBottomOf="@+id/button_send_main" />
 </androidx.constraintlayout.widget.ConstraintLayout>
